--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -76,8 +76,8 @@
             </div>
             <div class="member-tile-content">
               <h3>{{pagecontent.CandidateName}}</h3>
-              <!-- <p>Leader, President, Chairperson, Parliamentary Chairperson, Chief Minister of Andhra Pradesh</p>
-              <p><strong>Kuppam Constituency</strong></p> -->
+               <p>Lorum Ipsum Lorum Ipsum Lorum Ipsum Lorum Ipsum Lorum Ipsum Lorum Ipsum </p>
+              <p><strong>Constituency Name</strong></p> 
             </div>
             <div class="member-tile-footer">
               <div class="member-tile-likes">
@@ -102,8 +102,8 @@
             </div>
             <div class="member-tile-content">
               <h3>{{pagecontent.CandidateName}}</h3>
-              <!-- <p>Leader, President, Chairperson, Parliamentary Chairperson, Chief Minister of Andhra Pradesh</p>
-              <p><strong>Kuppam Constituency</strong></p> -->
+               <p>Lorum Ipsum Lorum Ipsum Lorum Ipsum Lorum Ipsum Lorum Ipsum Lorum Ipsum </p>
+              <p><strong>Constituency Name</strong></p> 
             </div>
             <div class="member-tile-footer">
               <div class="member-tile-likes">
@@ -128,8 +128,8 @@
             </div>
             <div class="member-tile-content">
               <h3>{{pagecontent.CandidateName}}</h3>
-              <!-- <p>Leader, President, Chairperson, Parliamentary Chairperson, Chief Minister of Andhra Pradesh</p>
-              <p><strong>Kuppam Constituency</strong></p> -->
+               <p>Lorum Ipsum Lorum Ipsum Lorum Ipsum Lorum Ipsum Lorum Ipsum Lorum Ipsum </p>
+              <p><strong>Constituency Name</strong></p> 
             </div>
             <div class="member-tile-footer">
               <div class="member-tile-likes">
