updated survey data and data sharing between components

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -144,7 +144,7 @@
 
     </div>
     <div class="side-section">
-      <a href="javascript:void(0)" routerLink="/survey" class="btn btn-primary">Take a Survey</a>
+      <a href="javascript:void(0)" routerLink="/survey" (click)="newMessage()" class="btn btn-primary">Take a Survey</a>
       <h2>Opinion Polls</h2>
       <div class="chart-wrap">
         <label>Who will you vote for as PM candidate if general elections were held today?</label>
