--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -196,7 +196,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <!--<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>-->
         <h2 class="modal-title">Welcome to Digital Poll</h2>
       </div>
       <div class="modal-body">
@@ -212,7 +212,16 @@
                         <div *ngIf="submitted && f.FirstName.errors" class="invalid-feedback">
                             <div *ngIf="f.FirstName.errors.required">First Name is required</div>
                         </div>
-                      
+                      </div>
+                      <div class="form-group">
+                        <label for="exampleInputEmail1">State</label>
+                        <select class="form-control" id="select_state" formControlName="StateID" *ngIf="stateDetails | async as stateInfo else empty" [ngClass]="{ 'is-invalid': submitted && f.StateID.errors }" (change)="stateChange($event.target)">
+                          <option *ngFor="let stateItem of stateInfo" value={{stateItem.StateId}} [value]=StateID>{{stateItem.StateName}}</option>                          
+                        </select>
+                        <div *ngIf="submitted && f.StateID.errors" class="invalid-feedback">
+                          <div *ngIf="f.StateID.errors.required">State has to be Selected</div>
+                      </div>
+                      </div>
                       <div class="form-group">
                         <div>
                           <label for="exampleInputMobile">Mobile</label>
@@ -233,12 +242,9 @@
                            
 
                         </div>
-                      </div>
+                      
                                          
-                      <div class="form-group">
-                        <label for="exampleInputMobileOtp">Enter OTP</label>
-                        <input type="text" class="form-control" id="exampleInputOtp" placeholder="Enter OTP">
-                      </div>
+
                        
                     </div>
                     <div class="col-xs-6">
@@ -250,15 +256,7 @@
                             <div *ngIf="f.Email.errors.email">Email must be a valid email address</div>
                         </div>
                       </div>
-                      <div class="form-group">
-                        <label for="exampleInputEmail1">State</label>
-                        <select class="form-control" id="select_state" formControlName="StateID" *ngIf="stateDetails | async as stateInfo else empty" [ngClass]="{ 'is-invalid': submitted && f.StateID.errors }" (change)="stateChange($event.target)">
-                          <option *ngFor="let stateItem of stateInfo" value={{stateItem.StateId}} [value]=StateID>{{stateItem.StateName}}</option>                          
-                        </select>
-                        <div *ngIf="submitted && f.StateID.errors" class="invalid-feedback">
-                          <div *ngIf="f.StateID.errors.required">State has to be Selected</div>
-                      </div>
-                      </div>
+
 
                       <div class="form-group">
                         <div class="radio"> 
@@ -283,20 +281,25 @@
                         
                        
                       </div>
+                      <div class="form-group">
+                        <label for="exampleInputMobileOtp">Enter OTP</label>
+                        <input type="text" class="form-control" id="exampleInputOtp" placeholder="Enter OTP">
+                      </div>
                     </div>
                   </div>
                 
                 </div>
               </div>
           </div>
-        
+        </div>
         <div class="clearfix"></div>
-      </div>
+     
+    </div>
       <div class="modal-footer">
         <button type="button" id="validate_user" (click)="getDetails($event)" class="btn btn-primary">Submit</button>
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <!--<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
       </div>
-    </div>
+    
   </div>
 
 </div>
